# NTK_Learning_Curves

./: LICENSE  Mode_Err_Expt.ipynb  NTK_gd_comparison.py  README.md  approx_learning_curves.py  compare_nngp_ntk.py  compute_NTK_spectrum.py  gegenbauer.py  kernel_regression_lc.py  mnist_multiple_classes.py  noisy_kernel_lc.py  pyproject.toml  setup.py  two_layer.py
ntk_generalization/: NTK_gd_comparison.py  __init__.py  approx_learning_curves.py  kernel_regression_lc.py  mnist_multiple_classes.py  noisy_kernel_lc.py  plot_curve.py  plot_two_layer.py  two_layer.py
ntk_generalization/utils/: __init__.py  approx_learning_curves.py  compute_NTK_spectrum.py  gegenbauer.py  theory_lc.py
results/: all_errs_lamb0.000000_d10.csv  all_errs_lamb0.000000_d100.csv  all_kernel_std_test_rough_4_layer_d30_M500_target10000_numiter10000_lr0.csv  all_kernel_test_rough_4_layer_d30_M500_target10000_numiter10000_lr0.csv  all_test_losses_rough_4_layer_d30_M500_target10000_numiter10000_lr0.csv  mc_errs_lamb0.000000_d10.csv  mc_errs_lamb0.000000_d100.csv  noisy_all_errs_lamb0.000000_d10.csv  noisy_mc_errs_lamb0.000000_d10.csv  noisy_std_errs_lamb0.000000_d10.csv  noisy_std_mc_errs_lamb0.000000_d10.csv  std_errs_lamb0.000000_d10.csv  std_errs_lamb0.000000_d100.csv  std_mc_errs_lamb0.000000_d10.csv  std_mc_errs_lamb0.000000_d100.csv  std_test_losses_rough_4_layer_d30_M500_target10000_numiter10000_lr0.csv  train_loss_4_layer_30_M500_target10000_numiter10000_lr0.csv
utils/: test.py
